Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,049
    • Issues 3,049
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 993
    • Merge requests 993
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • MesaMesa
  • mesamesa
  • Issues
  • #1834
Closed
Open
Issue created Sep 25, 2019 by Bugzilla Migration User@bugzilla-migration

HSW. Tropico 6 and SuperTuxKart have shadows flickering

Submitted by Denis

Assigned to Intel 3D Bugs Mailing List

Link to original bug (#111631)

Description

According to Danylo's investigations, he found out that shadows flickering in the game are related to the same issue with shadows, reported here https://bugs.freedesktop.org/show_bug.cgi?id=110395 But now there is impossible to reproduce that problem in Supertuxcart. I re-checked Tropico and found out, that flickering is still actual for the game. More over - patch, maiden for tuxcart - fixes it => !660 (merged)

Attaching apitace for the game => https://drive.google.com/open?id=1sYaMbbZLrIsB4GItKdty6wzYmJ0BDN1i (pay attention to the shadows under the trees, all other "flickers" not relate to current discussion)

Version: git

See also

  • https://bugs.freedesktop.org/show_bug.cgi?id=110395
  • https://bugs.freedesktop.org/show_bug.cgi?id=110315
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking